# T2Well_post

./: .gitignore  MANIFEST.in  README.md  main.py  plot_T2Well_files.ipynb  plot_T2output.py  pyproject.toml  requirements.txt  script_old.py
.devcontainer/: devcontainer.json
sample_files/sample_T2Well_ECO2M/: COFT_Injection_1km_5bar_1kg  DOFT  FOFT_Injection_1km_5bar_1kg  INCON  Inj.out  Injection_1km_5bar_1kg.xlsx  LINEQ  WHConds_Injection_1km_5bar_1kg.txt  fflow_Injection_1km_5bar_1kg_ 1
sample_files/sample_T2Well_ECO2M_v2/: DOFT  FOFT_Injection_1km_5bar_1kg  GENER  INCON  Inj.out  Injection_1km_5bar_1kg.inp  LINEQ  SAVE  VERS  xyzrock.mesh
sample_files/sample_T2Well_ECO2N/: CO2TAB  COFT  FOFT  GENER  MESH  SAVE  Thumbs.db  VERS  case2.inp  case2.out
src/notebooks/: plot_T2Well_files.ipynb
src/tough_well_post/: plot_T2output.py
src/tough_well_post/sample_files/sample_T2Well_ECO2M/: CO2TAB  Injection_1km_5bar_1kg.inp  MESH  SAVE  VERS  fstatus_Injection_1km_5bar_1kg_ 1  xyzrock.mesh
src/tough_well_post/sample_files/sample_T2Well_ECO2M_v2/: CO2TAB  COFT_Injection_1km_5bar_1kg  MESH  TABLE  WHConds_Injection_1km_5bar_1kg.txt  fflow_Injection_1km_5bar_1kg_ 1  fstatus_Injection_1km_5bar_1kg_ 1
src/tough_well_post/sample_files/sample_T2Well_ECO2N/: DOFT  INCON  LINEQ
