[project]
name = "t2well-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jsonpointer>=3.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",]










[tool.package]
include = "tough_well_post"
from = "src"



[project.scripts]
plot_T2output = "tough_well_post.plot_T2output:main"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.uv]
package = true

